manifests/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: chat-me
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://chat-me-delta.vercel.app"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: chatme-server.safvancmc.in
      http:
        paths:
          # Socket.IO paths with specific rewrite rules
          - path: /chat/socket.io(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-chat-service
                port:
                  number: 1239
          - path: /notification/socket.io(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-notification-service
                port:
                  number: 1236

          # Other API paths without rewriting
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-auth-service
                port:
                  number: 1234
          - path: /api/admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-admin-service
                port:
                  number: 1235
          - path: /api/notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-notification-service
                port:
                  number: 1236
          - path: /api/profile(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-profile-service
                port:
                  number: 1237        
          - path: /api/post(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-post-service
                port:
                  number: 1238
          - path: /api/chat(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-chat-service
                port:
                  number: 1239
          - path: /api/job(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-me-job-service
                port:
                  number: 1240
  tls:
    - hosts:
        - chatme-server.safvancmc.in
      secretName: chatme-tls
